[project]
name = "blurb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.74.0",
    "databricks-sql-connector>=3.0.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "praw>=7.8.1",
    "pyarrow>=14.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.9",
]
